bootstrap/0/lexer.c
/* Generated by re2c 0.13.5 on Fri Jan 25 10:56:13 2013 */
#line 1 "lexer.re"
#include "common.h"
#include "lexer.h"

#include <stdint.h>
#include <stdlib.h>
#include <string.h>

static const char *first_eol_back(const char *start, const char *cur) {
  while (cur >= start) {
    if (cur[0] == '\n') {
      return cur;
    }
    cur -= 1;
  }
  return start;
}

static error block_down(struct parser *parser, bool oneline) {
  parser->block_style[parser->block_depth] = oneline;
  parser->block_depth += 1;
  if (parser->block_depth >= ARRAY_SIZE(parser->block_style)) {
    return EINVAL;
  }
  return 0;
}

static void block_up(struct parser *parser, bool oneline) {
  assert(parser->block_depth > 0);
  assert(parser->block_style[parser->block_depth - 1] == oneline);

  // Don't erase value, lexer_back() needs it.
  parser->block_depth -= 1;
}

static bool block_style(struct parser *parser) {
  return parser->block_style[parser->block_depth - 1];
}

error lexer_scan(struct token *tok, struct parser *parser) {
  typedef char YYCTYPE;
  const char *YYCURSOR = parser->data + parser->pos;
  const char *YYLIMIT = parser->data + parser->len;
  const char *YYMARKER = NULL;
  const char *start;
  char opening;

  size_t spaces = 0;

#define ERROR(e, fmt, ...) do { \
  tok->value = start; \
  snprintf(parser->error_message, sizeof(parser->error_message), fmt, ##__VA_ARGS__); \
  return e; \
} while (0)

#define YYFILL(n) do { \
  if (YYCURSOR >= YYLIMIT + 1) { \
    ERROR(EINVAL, "unexpected end-of-file while reading token"); \
  } \
} while (0)

#define R(type) do { \
  parser->pos = YYCURSOR - parser->data; \
  tok->t = type; \
  tok->value = start; \
  tok->len = YYCURSOR - start; \
  return 0; \
} while (0)

  if (parser->inject_eol_after_eob) {
    parser->inject_eol_after_eob = FALSE;
    parser->tok_was_injected = TRUE;
    tok->t = TEOL;
    tok->value = first_eol_back(parser->data, YYCURSOR);
    tok->len = 1;
    return 0;
  }

  parser->tok_was_injected = FALSE;

normal:
  start = YYCURSOR;


#line 87 "lexer.c"
{
	YYCTYPE yych;
	unsigned int yyaccept = 0;
	static const unsigned char yybm[] = {
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		240, 240, 240, 240, 240, 240, 240, 240, 
		176, 176,   0,   0,   0,   0,   0,   0, 
		  0, 144, 144, 144, 144, 144, 144,  16, 
		 16,  16,  16,  16,  16,  16,  16,  16, 
		 16,  16,  16,  16,  16,  16,  16,  16, 
		 16,  16,  16,   0,   0,   0,   0,  16, 
		  0, 144, 144, 144, 144, 144, 144,  16, 
		 16,  16,  16,  16,  16,  16,  16,  16, 
		 16,  16,  16,  16,  16,  16,  16,  16, 
		 16,  16,  16,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
	};

	if ((YYLIMIT - YYCURSOR) < 10) YYFILL(10);
	yych = *YYCURSOR;
	switch (yych) {
	case '\t':
	case '\r':
	case ' ':	goto yy4;
	case '\n':	goto yy72;
	case '!':	goto yy48;
	case '"':
	case '\'':	goto yy10;
	case '#':	goto yy62;
	case '%':	goto yy38;
	case '&':	goto yy40;
	case '(':	goto yy68;
	case ')':	goto yy70;
	case '*':	goto yy34;
	case '+':	goto yy32;
	case ',':	goto yy54;
	case '-':	goto yy2;
	case '.':	goto yy58;
	case '/':	goto yy36;
	case '0':	goto yy6;
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy8;
	case ':':	goto yy52;
	case ';':	goto yy56;
	case '<':	goto yy30;
	case '=':	goto yy46;
	case '>':	goto yy28;
	case '@':	goto yy60;
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'g':
	case 'h':
	case 'j':
	case 'k':
	case 'q':
	case 's':
	case 'u':
	case 'v':
	case 'x':
	case 'y':
	case 'z':	goto yy76;
	case '[':	goto yy64;
	case '\\':	goto yy74;
	case '^':	goto yy44;
	case 'a':	goto yy24;
	case 'b':	goto yy22;
	case 'c':	goto yy21;
	case 'd':	goto yy18;
	case 'e':	goto yy14;
	case 'f':	goto yy15;
	case 'i':	goto yy17;
	case 'l':	goto yy19;
	case 'm':	goto yy16;
	case 'n':	goto yy26;
	case 'o':	goto yy25;
	case 'p':	goto yy27;
	case 'r':	goto yy23;
	case 't':	goto yy12;
	case 'w':	goto yy20;
	case '{':	goto yy66;
	case '|':	goto yy42;
	case '}':	goto yy67;
	case '~':	goto yy50;
	default:	goto yy77;
	}
yy2:
	++YYCURSOR;
	if ((yych = *YYCURSOR) <= '<') {
		if (yych == '-') goto yy305;
	} else {
		if (yych <= '=') goto yy301;
		if (yych <= '>') goto yy303;
	}
#line 163 "lexer.re"
	{ R(TMINUS); }
#line 235 "lexer.c"
yy4:
	++YYCURSOR;
#line 87 "lexer.re"
	{ goto normal; }
#line 240 "lexer.c"
yy6:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	if (yybm[0+yych] & 64) {
		goto yy294;
	}
	if (yych == 'x') goto yy297;
yy7:
#line 89 "lexer.re"
	{ R(TNUMBER); }
#line 251 "lexer.c"
yy8:
	++YYCURSOR;
	yych = *YYCURSOR;
	goto yy293;
yy9:
#line 90 "lexer.re"
	{ R(TNUMBER); }
#line 259 "lexer.c"
yy10:
	++YYCURSOR;
#line 94 "lexer.re"
	{ opening = *(YYCURSOR-1); goto string; }
#line 264 "lexer.c"
yy12:
	++YYCURSOR;
	if ((yych = *YYCURSOR) <= 'q') {
		if (yych == 'h') goto yy280;
		goto yy79;
	} else {
		if (yych <= 'r') goto yy281;
		if (yych == 'y') goto yy282;
		goto yy79;
	}
yy13:
#line 210 "lexer.re"
	{ R(TIDENT); }
#line 278 "lexer.c"
yy14:
	yych = *++YYCURSOR;
	if (yych == 'l') goto yy251;
	if (yych == 'x') goto yy252;
	goto yy79;
yy15:
	yych = *++YYCURSOR;
	if (yych <= 'q') {
		if (yych == 'o') goto yy241;
		goto yy79;
	} else {
		if (yych <= 'r') goto yy242;
		if (yych == 'u') goto yy243;
		goto yy79;
	}
yy16:
	yych = *++YYCURSOR;
	if (yych == 'a') goto yy230;
	if (yych == 'e') goto yy231;
	goto yy79;
yy17:
	yych = *++YYCURSOR;
	if (yych <= 'm') {
		if (yych == 'f') goto yy201;
		if (yych <= 'l') goto yy79;
		goto yy203;
	} else {
		if (yych <= 'n') goto yy204;
		if (yych == 's') goto yy206;
		goto yy79;
	}
yy18:
	yych = *++YYCURSOR;
	if (yych == 'e') goto yy184;
	if (yych == 'y') goto yy185;
	goto yy79;
yy19:
	yych = *++YYCURSOR;
	if (yych == 'e') goto yy181;
	goto yy79;
yy20:
	yych = *++YYCURSOR;
	if (yych == 'h') goto yy176;
	goto yy79;
yy21:
	yych = *++YYCURSOR;
	if (yych == 'a') goto yy163;
	if (yych == 'o') goto yy164;
	goto yy79;
yy22:
	yych = *++YYCURSOR;
	if (yych == 'l') goto yy153;
	if (yych == 'r') goto yy154;
	goto yy79;
yy23:
	yych = *++YYCURSOR;
	if (yych == 'e') goto yy147;
	goto yy79;
yy24:
	yych = *++YYCURSOR;
	if (yych == 'n') goto yy144;
	goto yy79;
yy25:
	yych = *++YYCURSOR;
	if (yych == 'r') goto yy142;
	goto yy79;
yy26:
	yych = *++YYCURSOR;
	if (yych == 'o') goto yy135;
	if (yych == 'u') goto yy136;
	goto yy79;
yy27:
	yych = *++YYCURSOR;
	if (yych <= 'n') {
		if (yych == 'a') goto yy124;
		goto yy79;
	} else {
		if (yych <= 'o') goto yy125;
		if (yych == 'r') goto yy126;
		goto yy79;
	}
yy28:
	++YYCURSOR;
	if ((yych = *YYCURSOR) <= '<') goto yy29;
	if (yych <= '=') goto yy118;
	if (yych <= '>') goto yy120;
yy29:
#line 160 "lexer.re"
	{ R(TGT); }
#line 368 "lexer.c"
yy30:
	++YYCURSOR;
	if ((yych = *YYCURSOR) <= ';') goto yy31;
	if (yych <= '<') goto yy114;
	if (yych <= '=') goto yy112;
yy31:
#line 158 "lexer.re"
	{ R(TLT); }
#line 377 "lexer.c"
yy32:
	++YYCURSOR;
	if ((yych = *YYCURSOR) == '=') goto yy110;
#line 162 "lexer.re"
	{ R(TPLUS); }
#line 383 "lexer.c"
yy34:
	++YYCURSOR;
	if ((yych = *YYCURSOR) == '=') goto yy108;
#line 164 "lexer.re"
	{ R(TTIMES); }
#line 389 "lexer.c"
yy36:
	++YYCURSOR;
	if ((yych = *YYCURSOR) == '=') goto yy106;
#line 165 "lexer.re"
	{ R(TDIVIDE); }
#line 395 "lexer.c"
yy38:
	++YYCURSOR;
	if ((yych = *YYCURSOR) == '=') goto yy104;
#line 166 "lexer.re"
	{ R(TMODULO); }
#line 401 "lexer.c"
yy40:
	++YYCURSOR;
	if ((yych = *YYCURSOR) == '=') goto yy102;
#line 167 "lexer.re"
	{ R(TBWAND); }
#line 407 "lexer.c"
yy42:
	++YYCURSOR;
	if ((yych = *YYCURSOR) == '=') goto yy100;
#line 168 "lexer.re"
	{ R(TBWOR); }
#line 413 "lexer.c"
yy44:
	++YYCURSOR;
	if ((yych = *YYCURSOR) == '=') goto yy98;
#line 169 "lexer.re"
	{ R(TBWXOR); }
#line 419 "lexer.c"
yy46:
	++YYCURSOR;
	if ((yych = *YYCURSOR) == '=') goto yy96;
#line 161 "lexer.re"
	{ R(TASSIGN); }
#line 425 "lexer.c"
yy48:
	++YYCURSOR;
	if ((yych = *YYCURSOR) == '=') goto yy94;
#line 181 "lexer.re"
	{ R(TBANG); }
#line 431 "lexer.c"
yy50:
	++YYCURSOR;
#line 170 "lexer.re"
	{ R(TUBWNOT); }
#line 436 "lexer.c"
yy52:
	++YYCURSOR;
#line 171 "lexer.re"
	{ R(TCOLON); }
#line 441 "lexer.c"
yy54:
	++YYCURSOR;
#line 172 "lexer.re"
	{ R(TCOMMA); }
#line 446 "lexer.c"
yy56:
	++YYCURSOR;
#line 173 "lexer.re"
	{
    if (block_style(parser)) {
      R(TEOL);
    } else {
      ERROR(EINVAL, "lexer: unexpected semicolon in multi-line block");
    }
  }
#line 457 "lexer.c"
yy58:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych == '.') goto yy90;
yy59:
#line 180 "lexer.re"
	{ R(TDOT); }
#line 465 "lexer.c"
yy60:
	++YYCURSOR;
	if ((yych = *YYCURSOR) == '!') goto yy88;
	if (yych == '#') goto yy86;
#line 184 "lexer.re"
	{ R(TREFDOT); }
#line 472 "lexer.c"
yy62:
	++YYCURSOR;
#line 185 "lexer.re"
	{ R(TSHARP); }
#line 477 "lexer.c"
yy64:
	++YYCURSOR;
	if ((yych = *YYCURSOR) == ']') goto yy84;
yy65:
#line 212 "lexer.re"
	{ ERROR(EINVAL, "lexer: illegal char '\\0%hho'", *(YYCURSOR - 1)); }
#line 484 "lexer.c"
yy66:
